--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top">Transparency Nigeria</a>
+                <a href="#top">DOGARA</a>
             </li>
             <li>
                 <a href="#top">Home</a>
@@ -30,7 +30,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Transparency Nigeria</h1>
+            <h1>DOGARA</h1>
             <h3>Free &amp; Beautiful Websites</h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
@@ -43,7 +43,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Africa is in a digital revolution.</h2>
-                    <p class="lead">People need information. We get that information to more people, live.</p>
+                    <p class="lead">
+                    Dogara is an American non-profit company based out of California dedicated to the goal of encouraging transparency among African Governments. By 2020, over 200 million Africans will be on the internet, and we believe that every local government in Africa should have a website that serves to inform its local citizens of the services available to them.<br><br>
+
+                    We are a group of experts in web design and copywriting who will work for your local government to tell their story. We provide free, high-quality, websites for official local governments in Africa, as well as a limited number of free website grants for African businesses that show the potential to make life better in their community. Our highly trained pro bono consultants will work with you to give you a web presence money can't buy. Our team has created websites for major businesses, non-profits, and local government officials in the U.S.</p>
                 </div>
             </div>
             <!-- /.row -->
