--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -31,7 +31,7 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1>DOGARA</h1>
-            <h3>Free &amp; Beautiful Websites</h3>
+            <h3>Professional websites</h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
         </div>
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Africa is in a digital revolution.</h2>
+                    <h2>We help get local governments online.</h2>
                     <p class="lead">
                     Dogara is an American non-profit company based out of California dedicated to the goal of encouraging transparency among African Governments. By 2020, over 200 million Africans will be on the internet, and we believe that every local government in Africa should have a website that serves to inform its local citizens of the services available to them.<br><br>
 
@@ -127,7 +127,7 @@
 
     <!-- Callout -->
     <aside class="callout">
-        <div class="text-vertical-center">
+        <div class="text-vertical-center" id="transparent-world">
             <h1>Join the revolution!</h1>
         </div>
     </aside>
@@ -139,8 +139,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h3>Find out now if you qualify for a website!</h3>
-                    <a href="#" class="btn btn-lg btn-light">Get Website!</a>
-                    <a href="#" class="btn btn-lg btn-dark">Contact</a>
+                    <a href="#" class="btn btn-lg btn-light">Contact</a>
                 </div>
             </div>
         </div>
@@ -161,12 +160,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Start Bootstrap</strong>
+                    <h4><strong>Dogara</strong>
                     </h4>
                     <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com">name@example.com</a>
+                        <li><i class="fa fa-phone fa-fw"></i> (707) 739-6243</li>
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com">hello@example.com</a>
                         </li>
                     </ul>
                     <br>
@@ -198,7 +197,7 @@
 
 
     <!-- Custom Theme JavaScript -->
-    <!-- port to the js file -->
+    <!-- TO DO: port to the js file -->
     <script>
     // Closes the sidebar menu
     $("#menu-close").click(function(e) {
