--- a/app/assets/stylesheets/stylish-portfolio.css
+++ b/app/assets/stylesheets/stylish-portfolio.css
@@ -16,6 +16,13 @@ body {
     font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
+.transparency {
+    opacity: 0.5;
+    background-color: #333;
+    width: 100%;
+    height: 100%;
+}
+
 h1 {
     color: white;
 }
@@ -202,6 +209,11 @@ hr.small {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+}
+
+#transparent-world {
+    opacity: 0.7;
+    background-color: #333;
 }
 
 /* Portfolio */
